# ubuntu_p3_12_torch_devcontainer

./: .dev.sh  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-project.ini  ENV_README.md  README.md  dev.sh  docker-compose.override.yml  dockerfile.debug  env.local  performance_tips.md  pyproject.toml  test_gpu.py
.devcontainer/: Dockerfile  devcontainer.debug.json  devcontainer.json
.github/workflows/: security.yml  test.yml
.mcp/: servers.json
.roo/: roo.json
configs/: .gitkeep  data_paths.example.yaml
docs/env/: TODO.md  env_local_file_guide.md  environment_md.md  quickstart_md.md  setup_md.md  template_structure_md.md  torch_starter.md  volume_usage_guide.md
notebooks/: .gitkeep  JUPYTER_SETUP_GUIDE.md  test.ipynb
scripts/: .gitkeep  test123.py
src/: .gitkeep
templates/: .gitkeep
tests/: .gitkeep  test_gpu.py  test_sample.py
tests/test_env/: test_sample.py
torch_starter/: __init__.py
torch_starter/core/: __init__.py  sample.py
verify_setup/: get_pytorch_cuda.py  get_torch_lib_path.py  gpu_test.py  print_torch_info.py  setup_api_keys.sh  test_gpu.sh  verify_environment.py  verify_setup.sh
