[project]
name = "torch-starter"
version = "0.1.0"
description = "PyTorch 2.8.0 deep learning development environment with CUDA 12.9 support using uv and system Python with VS Code Dev Containers."
requires-python = ">=3.11.0"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@domain.com" }]
maintainers = [{ name = "Your Name", email = "your.email@domain.com" }]
keywords = ["deep-learning", "pytorch", "transformers", "cuda", "gpu", "uv", "devcontainer", "cuda-12.9"]

# Core dependencies - PyTorch ecosystem is provided by the base image (pytorch/pytorch:2.8.0-cuda12.9-cudnn9-runtime)
# Only additional packages that are not in the base image are listed here
dependencies = [
  # Core scientific computing (not in base image)
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "scipy>=1.10.0", 
  "scikit-learn>=1.3.0",
  "tqdm>=4.65.0",

  # Hugging Face ecosystem
  "transformers>=4.30.0",
  "datasets>=2.12.0", 
  "accelerate>=0.20.0",
  "safetensors>=0.3.0",
  "sentencepiece>=0.1.99",
  "tokenizers>=0.13.0",
  
  # Image processing
  "pillow>=9.5.0",
  "albumentations>=1.3.0",
  
  # Visualization
  "matplotlib>=3.7.0",
  
  # Jupyter and interactive development
  "jupyter>=1.0.0",
  "ipykernel>=6.23.0",
  "ipywidgets>=8.0.0",
  
  # Configuration and utilities
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "rich>=13.0.0",
  "typer[all]>=0.9.0",
  
  # GPU monitoring and utilities
  "nvidia-ml-py>=12.535.0"
]

[project.optional-dependencies]

# Development tools - code quality and testing
dev = [
  # Linting and formatting
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  
  # Testing framework
  "pytest>=7.4.0",
  "pytest-mock>=3.11.0",
  "pytest-asyncio>=0.21.0",
  "pytest-xdist>=3.3.0",  # Parallel testing
  "pytest-cov>=4.1.0",    # Coverage support
  
  # Type stubs for better type checking
  "types-requests>=2.31.0",
  "types-PyYAML>=6.0.0",
  "types-pillow>=10.0.0",
  
  # Pre-commit hooks
  "pre-commit>=3.3.0",
  
  # Documentation
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  
  # Enhanced development tools
  "ipdb>=0.13.0",
  "pdbpp>=0.10.0",
]

# Extended data science and visualization tools
datascience = [
  "seaborn>=0.12.0",
  "plotly>=5.15.0",
  "bokeh>=3.2.0",
  "altair>=5.0.0",
  
  # Advanced data processing
  "polars>=0.18.0",
  "pyarrow>=12.0.0",
  "fastparquet>=2023.7.0",
  
  # Image processing
  "scikit-image>=0.21.0",
  "opencv-python>=4.8.0",
  "pywavelets>=1.4.0",
  
  # Statistical analysis
  "statsmodels>=0.14.0",
  "pingouin>=0.5.0",
]

# Jupyter and interactive development
notebook = [
  "jupyterlab>=4.0.0",
  "jupyterlab-widgets>=3.0.0",
  "ipdb>=0.13.0",
  "notebook>=7.0.0",
  
  # Jupyter extensions
  "jupyterlab-git>=0.42.0",
  "nbconvert>=7.7.0",
  "nbformat>=5.9.0",
  "jupyterlab-nvdashboard>=0.8.0",  # GPU monitoring in Jupyter
  
  # Interactive widgets and visualization
  "ipympl>=0.9.0",
  "plotly>=5.15.0",
  "panel>=1.2.0",
]

# Experiment tracking and MLOps
tracking = [
  "tensorboard>=2.13.0",
  "wandb>=0.15.0",
  "mlflow>=2.5.0",
  "clearml>=1.11.0",
  
  # Model versioning and management
  "dvc>=3.0.0",
  "dvclive>=2.10.0",
]

# Data acquisition and external APIs
data = [
  "kaggle>=1.5.0",
  "huggingface-hub>=0.16.0",
  
  # Database connectors
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pymongo>=4.4.0",
  
  # Web scraping and APIs
  "httpx>=0.24.0",
  "beautifulsoup4>=4.12.0",
  "selenium>=4.10.0",
]

# Performance profiling and debugging tools
profiling = [
  "viztracer>=0.15.0",
  "memory-profiler>=0.61.0",
  "py-spy>=0.3.0",
  "line-profiler>=4.0.0",
  "nvitop>=1.1.0",           # Advanced GPU monitoring
  
  # GPU profiling
  "torch-tb-profiler>=0.4.0",
  "nvidia-ml-py>=12.535.0",
  "pynvml>=11.5.0",
  
  # Enhanced profiling
  "scalene>=1.5.0",         # CPU, GPU, and memory profiler
  "pyinstrument>=4.4.0",    # Statistical profiler
]

# Security scanning and code analysis
security = [
  "safety>=2.3.0",
  "bandit[toml]>=1.7.0",
  "semgrep>=1.30.0",
  "pip-audit>=2.6.0",       # Vulnerability scanner
]

# Audio and video processing (optional heavy dependencies)
media = [
  "librosa>=0.10.0",
  "soundfile>=0.12.0",
  "av>=10.0.0",
  "ffmpeg-python>=0.2.0",
]

# Natural language processing extensions
nlp = [
  "spacy>=3.6.0",
  "nltk>=3.8.0",
  "gensim>=4.3.0",
  "textblob>=0.17.0",
  "sentence-transformers>=2.2.0",
  "ftfy>=6.1.0",
]

# Computer vision extensions
cv = [
  "ultralytics>=8.0.0",
  "timm>=0.9.0",
  "mmcv>=2.0.0",
  "supervision>=0.12.0",
  
  # Enhanced computer vision
  "kornia>=0.7.0",          # Computer vision library for PyTorch
  "albumentations>=1.3.0",  # Image augmentation
]

# Reinforcement Learning
rl = [
  "gymnasium>=0.29.0",
  "stable-baselines3>=2.0.0",
  "sb3-contrib>=2.0.0",
  "tensorboard>=2.13.0",
]

# Large Language Models and Text Generation
llm = [
  "openai>=1.0.0",
  "anthropic>=0.3.0",
  "langchain>=0.0.200",
  "langchain-community>=0.0.20",
  "chromadb>=0.4.0",
  
  # Enhanced LLM tools
  "tiktoken>=0.5.0",        # OpenAI tokenizer
  "guidance>=0.1.0",        # Language model programming
]

# CUDA-specific packages (only install if CUDA is available)
cuda = [
  # These will be installed conditionally based on CUDA availability
  "cupy-cuda12x>=12.0.0",   # CUDA 12.x support for CuPy
  "nvidia-ml-py>=12.535.0",
  "pynvml>=11.5.0",
  "nvitop>=1.1.0",
]

# All extras combined for comprehensive installation
all = [
  "torch-starter[dev,datascience,notebook,tracking,data,profiling,security,media,nlp,cv,rl,llm]"
]

# CUDA-enabled full installation 
all-cuda = [
  "torch-starter[all,cuda]"
]

[project.urls]
Homepage = "https://github.com/yourusername/torch-starter"
Documentation = "https://github.com/yourusername/torch-starter#readme"
Repository = "https://github.com/yourusername/torch-starter.git"
Issues = "https://github.com/yourusername/torch-starter/issues"
Changelog = "https://github.com/yourusername/torch-starter/releases"

[project.scripts]
torch-starter = "torch_starter.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["torch_starter"]

[tool.hatch.version]
path = "torch_starter/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

# ==============================================================================
# UV CONFIGURATION - Fast Python package manager with system Python
# ==============================================================================
[tool.uv]
index-strategy = "unsafe-best-match"
resolution = "highest"
compile-bytecode = true
link-mode = "copy"
concurrent-downloads = 20
keyring-provider = "subprocess"
system = true  # Use system Python
python-downloads = "never"  # Never download Python, use system
native-tls = true

# Enhanced UV configuration for CUDA environment
cache-dir = "/home/ubuntu/.cache/uv"
cuda-version = "12.9"  # Match container CUDA version
python-version = "3.11"  # Match system Python version

# Exclude PyTorch packages as they're provided by base image
exclude-newer = []
find-links = []

# Enhanced dependency resolution for ML packages
[tool.uv.pip]
# Allow pre-releases for cutting-edge ML packages
prerelease = "if-necessary"

# Enhanced index URLs for ML packages
extra-index-url = [
    "https://download.pytorch.org/whl/cu121",  # PyTorch CUDA wheels (backup)
]

# ==============================================================================
# RUFF CONFIGURATION - Modern Python linting and formatting
# ==============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "notebooks/.ipynb_checkpoints",
    "data/",
    "logs/",
    "models/",
    "checkpoints/",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C90",    # mccabe complexity
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PD",     # pandas-vet
    "NPY",    # numpy specific rules
    "PERF",   # performance improvements
    "FURB",   # refurb (modernization)
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "S101",   # Use of assert detected (allow in tests)
    "T201",   # print found (allow in scripts and notebooks)
    "T203",   # pprint found 
    "S603",   # subprocess call - check for execution of untrusted input
    "S607",   # Starting a process with a partial executable path
    "ERA001", # Commented out code (allow for documentation)
    "PD901",  # Generic variable name for DataFrame
    "ARG002", # Unused method argument (common in inheritance)
    "PTH123", # Path.open() should be used instead of open()
    "PERF203", # try-except in loop (sometimes necessary)
]

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.isort]
known-first-party = ["torch_starter"]
known-third-party = ["torch", "transformers", "datasets", "numpy", "pandas", "matplotlib", "cv2", "PIL", "sklearn"]
force-single-line = false
lines-after-imports = 2
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "ARG002", "T201"]
"notebooks/*" = ["T201", "E402", "F401", "B018", "S101"]
"scripts/*" = ["T201", "S603", "S607"]
"**/conftest.py" = ["ARG001"]
"examples/*" = ["T201", "E402", "F401"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 88

# ==============================================================================
# MYPY CONFIGURATION - Static type checking
# ==============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_expr = false  # Too strict for ML code
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
show_error_codes = true
show_error_context = true

# Performance optimizations
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true
fast_module_lookup = true

exclude = [
    "build/",
    "dist/", 
    "notebooks/",
    "examples/",
    ".venv/",
    ".mypy_cache/",
    ".pytest_cache/",
    "__pycache__/",
    "tests/fixtures/",
    "data/",
    "logs/",
    "models/",
]

# Type checking overrides for heavy ML libraries
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchvision.*",
    "torchaudio.*", 
    "transformers.*",
    "datasets.*",
    "accelerate.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "sklearn.*",
    "scipy.*",
    "cv2.*",
    "albumentations.*",
    "viztracer.*",
    "memory_profiler.*",
    "wandb.*",
    "tensorboard.*",
    "kaggle.*",
    "librosa.*",
    "spacy.*",
    "detectron2.*",
    "mmcv.*",
    "gymnasium.*",
    "stable_baselines3.*",
    "supervision.*",
    "ultralytics.*",
    "timm.*",
    "nvitop.*",
    "pynvml.*",
    "nvidia_ml_py.*",
    "cupy.*",
    "kornia.*",
    "guidance.*",
    "tiktoken.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

# ==============================================================================
# PYTEST CONFIGURATION - Testing framework with GPU support
# ==============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",                    # Show all test outcomes
    "--strict-markers",       # Require explicit marker registration
    "--strict-config",        # Error on unknown config options
    "--disable-warnings",     # Disable warnings by default (enable as needed)
    "--tb=short",            # Short traceback format
    "--maxfail=3",           # Stop after 3 failures
    "--durations=10",        # Show 10 slowest tests
    "--cov=torch_starter",   # Coverage reporting
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",      # For CI/CD integration
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
    "cuda: marks tests that require CUDA (deselect with '-m \"not cuda\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "benchmark: marks tests as benchmarks",
    "memory_intensive: marks tests that use significant GPU memory",
    "multi_gpu: marks tests that require multiple GPUs",
    "requires_internet: marks tests that require internet connection",
    "requires_model: marks tests that require downloading models",
]

# Test discovery patterns
norecursedirs = [
    ".*",
    "build", 
    "dist",
    "venv",
    ".venv",
    "node_modules",
    "data",
    "logs",
    "models",
    "checkpoints",
]

# Filter warnings with enhanced ML library support
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore:.*CUDA.*:UserWarning",
    "ignore:.*PyTorch.*:UserWarning",
    "ignore:.*torch.*:UserWarning",
    "ignore::FutureWarning:transformers.*",
    "ignore::FutureWarning:datasets.*",
    "ignore::FutureWarning:accelerate.*",
    "ignore:.*Trying to infer the `batch_size`.*:UserWarning",
    "ignore:.*The parameter 'pretrained' is deprecated.*:FutureWarning",
]

# ==============================================================================
# COVERAGE CONFIGURATION - Test coverage reporting
# ==============================================================================
[tool.coverage.run]
source = ["torch_starter"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/verify_setup/*",
    "*/scripts/*",
    "*/examples/*",
    ".venv/*",
    "build/*",
    "dist/*",
    "*/benchmarks/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.paths]
source = ["torch_starter/", ".tox/*/site-packages/torch_starter/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ==============================================================================
# BANDIT CONFIGURATION - Security linting
# ==============================================================================
[tool.bandit]
exclude_dirs = ["tests", ".venv", "build", "dist", "notebooks", "examples"]
skips = ["B101", "B601", "B602", "B603"]  # Skip assert, shell usage warnings

[tool.bandit.assert_used]
skips = ["**/test_*.py", "tests/**", "notebooks/**"]

# ==============================================================================
# BLACK CONFIGURATION - Code formatting (fallback if Ruff unavailable)
# ==============================================================================
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?
  
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks/\.ipynb_checkpoints
  | data
  | logs
  | models
)/
'''

# ==============================================================================
# ENVIRONMENT-SPECIFIC CONFIGURATION
# ==============================================================================

# Development environment configuration
[tool.setuptools]
zip-safe = false

# Enhanced package discovery
[tool.setuptools.packages.find]
where = ["."]
include = ["torch_starter*"]
exclude = ["tests*", "notebooks*", "examples*", "data*", "logs*", "models*"]

# ==============================================================================
# CUDA AND PYTORCH SPECIFIC CONFIGURATION
# ==============================================================================

# Environment variables for CUDA optimization
[tool.cuda]
version = "12.9"
architecture = ["7.0", "7.5", "8.0", "8.6", "8.9", "9.0"]
memory_fraction = 0.9  # Reserve 10% GPU memory for system

# PyTorch specific optimizations
[tool.pytorch]
version = "2.8.0"
cuda_version = "12.9"
optimizations = [
    "torch.backends.cudnn.benchmark = True",
    "torch.backends.cuda.matmul.allow_tf32 = True",
    "torch.backends.cudnn.allow_tf32 = True"
]

# Model and data paths
[tool.paths]
data_dir = "/workspaces/torch-starter/data"
model_dir = "/workspaces/torch-starter/models" 
log_dir = "/workspaces/torch-starter/logs"
cache_dir = "/home/ubuntu/.cache"

# Development server configuration
[tool.jupyter]
port = 8888
allow_root = true
notebook_dir = "/workspaces/torch-starter"

[tool.tensorboard]
log_dir = "/workspaces/torch-starter/logs"
port = 6006